[package]
name = "redis_regular_expression_module"
version = "0.3.0"
authors = ["Aleksandr Startsev <norbyt93@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["redis", "regular", "expression"]
description = "Simple rust redis module to use regular expression"
repository = "https://github.com/Norbytus/rust-redis-module"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = "0.7.0"
regex = "1.3.4"
