[package]
name = "redis_regular_expression_module"
version = "0.4.1"
authors = ["Aleksandr Startsev <norbyt93@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
keywords = ["redis", "regular", "expression"]
description = "Simple rust redis module to use regular expression"
repository = "https://github.com/Norbytus/rust-redis-module"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
redis-module = "0.20.0"
regex = "1.5.4"

[dev-dependencies]
redis = "0.20.2"
chrono = "0.4.19"
uuid = { version = "0.8.2", features = ["v4"] }
lazy_static = "1.4.0"
